add art gallery app

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                         <button class="filter-btn">Web Apps</button>
                     </li>
                     <li class="filter-item">
-                        <button class="filter-btn">Audio Plugins</button>
+                        <button class="filter-btn">Desktop Apps</button>
                     </li>
-                    <li class="filter-item">
+                    <!-- <li class="filter-item">
                         <button class="filter-btn">Sampled Instruments</button>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
 
@@ -63,8 +63,7 @@
                         <br><br>
                         <h3 class="third-heading">Modular Synth System </h3>
                         <p class="description">A virtual eurorack that runs in the browser.<br><br><a
-                                href="https://modular-spiced.vercel.app/" target="_blank">Try it
-                                here</a>
+                                href="https://modular-spiced.vercel.app/" target="_blank">Visit in browser</a>
                         </p> <a class="playButton" href="#" onclick="toggleModular();">
                             <h3>►</h3>
                         </a> <br><br><br>
@@ -166,13 +165,10 @@
 
                 <div class="project">
                     <section class="project-info">
-
-                        <br><br>
-                        <h3 class="third-heading">Stereo Imager Plugin </h3>
-                        <p class="description">Two-band stereo imager
-                        </p> <a class="playButton" href="#" onclick="toggleImager();">
-                            <h3>►</h3>
-                        </a> <br><br><br>
+                        <h3 class="third-heading">Music Art Gallery </h3>
+                        <p class="description">Image gallery with API calls to update images regularly
+                        </p> <a href="https://music-art-gallery.vercel.app/" target="_blank">Visit in browser</a>
+                        <br><br> <br><br> <br><br>
 
                         <!-- <img width="15" height="15"
                             src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
@@ -181,11 +177,11 @@
 
 
                         <ul class="technologies">
-                            <li class="technology">C++</li>
-                            <li class="technology">Juce</li>
+                            <li class="technology">Typescript</li>
+                            <li class="technology">Next.js</li>
                         </ul>
                     </section>
-                    <img src="images/imager.png" alt="Project" class="grid-img">
+                    <img src="images/musicartgallery.png" alt="Project" class="grid-img">
                 </div>
 
 
@@ -316,6 +312,30 @@
                     </section>
                     <img src="images/appquizbright.png" alt="Project" class="grid-img">
                 </div>
+
+                <!-- <div class="project">
+                    <section class="project-info">
+
+                        <br><br>
+                        <h3 class="third-heading">Stereo Imager Plugin </h3>
+                        <p class="description">Two-band stereo imager
+                        </p> <a class="playButton" href="#" onclick="toggleImager();">
+                            <h3>►</h3>
+                        </a> <br><br><br>
+
+                        <!-- <img width="15" height="15"
+                            src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
+                            alt=""> <a href="https://github.com/wictorsson/stereimager" class="link-item"
+                            target="_blank">GitHub</a> -->
+
+
+                <!-- <ul class="technologies">
+                            <li class="technology">C++</li>
+                            <li class="technology">Juce</li>
+                        </ul>
+                    </section>
+                    <img src="images/imager.png" alt="Project" class="grid-img">
+                </div> -->
 
                 <div class="fade"></div>
             </section>
