--- a/index.html
+++ b/index.html
@@ -184,32 +184,32 @@
                     <img src="images/musicartgallery.png" alt="Project" class="grid-img">
                 </div>
 
-
-
                 <div class="project">
                     <section class="project-info">
 
                         <br><br>
-                        <h3 class="third-heading">Utility Plugin</h3>
-                        <p class="description">Gain/Pan/Filter
-                            <br>
-                        </p> <a class="playButton" href="#" onclick="toggleUtility();">
-                            <h3>►</h3>
-                        </a> <br><br><br>
+                        <h3 class="third-heading">Quiz App</h3>
+                        <p class="description">Audio quiz app in the browser. Answer audio related questions or create
+                            your own quiz.</p> <a href="https://quiz-app-wictorsson.vercel.app/" target="_blank">Visit
+                            in browser</a>
+                        <br><br> <br><br>
 
                         <!-- <img width="15" height="15"
                             src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
-                            alt=""> <a href="https://github.com/wictorsson/utilityplugin" class="link-item"
+                            alt=""> <a href=" https://github.com/wictorsson/quiz-app" class="link-item"
                             target="_blank">GitHub</a> -->
 
-                        <ul class="technologies">
-                            <li class="technology">C++</li>
-                            <li class="technology">Juce</li>
 
+                        <ul class="technologies">
+                            <li class="technology">HTML</li>
+                            <li class="technology">CSS</li>
+                            <li class="technology">JAVASCRIPT</li>
                         </ul>
                     </section>
-                    <img src="images/utility.png" alt="Project" class="grid-img">
+                    <img src="images/appquizbright.png" alt="Project" class="grid-img">
                 </div>
+
+
                 <div class="project">
                     <section class="project-info">
 
@@ -292,25 +292,25 @@
                     <section class="project-info">
 
                         <br><br>
-                        <h3 class="third-heading">Quiz App</h3>
-                        <p class="description">Audio quiz app in the browser. Answer audio related questions or create
-                            your own quiz.</p><a class="playButton" href="#" onclick="toggleAppQuiz();">
+                        <h3 class="third-heading">Utility Plugin</h3>
+                        <p class="description">Gain/Pan/Filter
+                            <br>
+                        </p> <a class="playButton" href="#" onclick="toggleUtility();">
                             <h3>►</h3>
-                        </a><br><br>
+                        </a> <br><br><br>
 
                         <!-- <img width="15" height="15"
                             src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
-                            alt=""> <a href=" https://github.com/wictorsson/quiz-app" class="link-item"
+                            alt=""> <a href="https://github.com/wictorsson/utilityplugin" class="link-item"
                             target="_blank">GitHub</a> -->
 
-
                         <ul class="technologies">
-                            <li class="technology">HTML</li>
-                            <li class="technology">CSS</li>
-                            <li class="technology">JAVASCRIPT</li>
+                            <li class="technology">C++</li>
+                            <li class="technology">Juce</li>
+
                         </ul>
                     </section>
-                    <img src="images/appquizbright.png" alt="Project" class="grid-img">
+                    <img src="images/utility.png" alt="Project" class="grid-img">
                 </div>
 
                 <!-- <div class="project">
