--- a/index.html
+++ b/index.html
@@ -5,29 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="icon" href="images/Vector.png">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-
     <title>Wictorsson - Portfolio</title>
 </head>
 
 <body>
-
     <div class="color"></div>
-
     <header class="header">
         <img src="images/Vector.png" alt="Wictorsson" class="logo">
-
         <a href="mailto:wictorsson@gmail.com" class="btn btn--contact">Contact</a>
-
-
     </header>
 
     <main class="main">
@@ -35,7 +26,6 @@
             <h1 class="first-heading">Fredrik Wictorsson</h1>
             <p class="text">Web Development & Audio Programming</p>
         </section>
-
         <section class="work">
             <div class="top">
                 <h2 class="second-heading">Portfolio</h2>
@@ -56,7 +46,22 @@
             </div>
 
             <section class="grid">
-
+                <div class="project">
+                    <section class="project-info">
+                        <br><br>
+                        <h3 class="third-heading">Groupera</h3>
+                        <p class="description">A social platform for self-help groups (Frontend)<br><br><a
+                                href="https://app.groupera.de/" target="_blank">Visit in browser</a>
+                        </p>
+                        <br><br><br>
+                        <ul class="technologies">
+                            <li class="technology">React</li>
+                            <li class="technology">Tailwind</li>
+                            <li class="technology">Redux</li>
+                        </ul>
+                    </section>
+                    <img src="./images/groupera.png" alt="Project" class="grid-img">
+                </div>
                 <div class="project">
                     <section class="project-info">
 
@@ -78,17 +83,14 @@
                     </section>
                     <img src="./images/modularspiced.png" alt="Project" class="grid-img">
                 </div>
-
                 <div class="project">
                     <section class="project-info">
-
                         <br><br>
                         <h3 class="third-heading">Filter plugin</h3>
                         <p class="description">Audio plugin/ Morphing filter
                         </p> <a class="playButton" href="#" onclick="toggleMorphFilter();">
                             <h3>►</h3>
                         </a> <br><br><br>
-
                         <ul class="technologies">
                             <li class="technology">C++</li>
                             <li class="technology">JUCE</li>
@@ -107,29 +109,21 @@
                         </p> <a class="playButton" href="#" onclick="toggleAudioPlayer();">
                             <h3>►</h3>
                         </a> <br><br><br>
-
                         <ul class="technologies">
                             <li class="technology">C++</li>
                             <li class="technology">Qt/QML</li>
-
                         </ul>
                     </section>
                     <img src="images/SamplePlayerDemo.png" alt="Project" class="grid-img">
                 </div>
-
                 <div class="project">
                     <section class="project-info">
-
                         <br><br>
                         <h3 class="third-heading">DJ Music Player </h3>
                         <p class="description">Dual deck music player with DJ functions
                         </p> <a class="playButton" href="#" onclick="toggleDjApp();">
                             <h3>►</h3>
                         </a> <br><br><br>
-
-
-
-
                         <ul class="technologies">
                             <li class="technology">C++</li>
                             <li class="technology">Qt</li>
@@ -141,20 +135,12 @@
 
                 <div class="project">
                     <section class="project-info">
-
                         <br><br>
                         <h3 class="third-heading">Delay Audio Plugin </h3>
                         <p class="description">Delay with reverse mode and other effects
                         </p> <a class="playButton" href="#" onclick="toggleEchoDelay();">
                             <h3>►</h3>
                         </a> <br><br><br>
-
-                        <!-- <img width="15" height="15"
-                            src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
-                            alt=""> <a href="https://github.com/wictorsson/echodelayline" class="link-item"
-                            target="_blank">GitHub</a> -->
-
-
                         <ul class="technologies">
                             <li class="technology">C++</li>
                             <li class="technology">Juce</li>
@@ -169,13 +155,6 @@
                         <p class="description">Image gallery with API calls to update images regularly
                         </p> <a href="https://music-art-gallery.vercel.app/" target="_blank">Visit in browser</a>
                         <br><br> <br><br> <br><br>
-
-                        <!-- <img width="15" height="15"
-                            src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
-                            alt=""> <a href="https://github.com/wictorsson/stereimager" class="link-item"
-                            target="_blank">GitHub</a> -->
-
-
                         <ul class="technologies">
                             <li class="technology">Typescript</li>
                             <li class="technology">Next.js</li>
@@ -193,13 +172,6 @@
                             your own quiz.</p> <a href="https://quiz-app-wictorsson.vercel.app/" target="_blank">Visit
                             in browser</a>
                         <br><br> <br><br>
-
-                        <!-- <img width="15" height="15"
-                            src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
-                            alt=""> <a href=" https://github.com/wictorsson/quiz-app" class="link-item"
-                            target="_blank">GitHub</a> -->
-
-
                         <ul class="technologies">
                             <li class="technology">HTML</li>
                             <li class="technology">CSS</li>
@@ -208,8 +180,6 @@
                     </section>
                     <img src="images/appquizbright.png" alt="Project" class="grid-img">
                 </div>
-
-
                 <div class="project">
                     <section class="project-info">
 
@@ -220,12 +190,6 @@
                         </p><a class="playButton" href="#" onclick="toggleClipper();">
                             <h3>►</h3>
                         </a> <br><br><br>
-
-                        <!-- <img width="15" height="15"
-                            src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
-                            alt=""> <a href="https://github.com/wictorsson/dist0322" class="link-item"
-                            target="_blank">GitHub</a> -->
-
                         <ul class="technologies">
                             <li class="technology">C++</li>
                             <li class="technology">Juce</li>
@@ -246,16 +210,12 @@
                             </a></p><a class="playButton" href="#" onclick="toggle();">
                             <h3>►</h3>
                         </a><br><br>
-
-
                         <ul class="technologies">
                             <li class="technology">Javascript</li>
                         </ul>
                     </section>
                     <img src="images/scripterLegato.jpg" alt="Project" class="grid-img">
-
                 </div>
-
                 <div class="project">
                     <section class="project-info">
                         <h3 class="third-heading">MD Cello (Kontakt)</h3>
@@ -273,7 +233,6 @@
                 </div>
                 <div class="project">
                     <section class="project-info">
-
                         <br><br>
                         <h3 class="third-heading">Ukrainian Bandura (Kontakt)</h3>
                         <p class="description">Released at Precision Sound</p><a class="playButton" href="#"
@@ -287,56 +246,6 @@
                     </section>
                     <img src="images/ubandura1.png" alt="Project" class="grid-img">
                 </div>
-
-                <div class="project">
-                    <section class="project-info">
-
-                        <br><br>
-                        <h3 class="third-heading">Utility Plugin</h3>
-                        <p class="description">Gain/Pan/Filter
-                            <br>
-                        </p> <a class="playButton" href="#" onclick="toggleUtility();">
-                            <h3>►</h3>
-                        </a> <br><br><br>
-
-                        <!-- <img width="15" height="15"
-                            src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
-                            alt=""> <a href="https://github.com/wictorsson/utilityplugin" class="link-item"
-                            target="_blank">GitHub</a> -->
-
-                        <ul class="technologies">
-                            <li class="technology">C++</li>
-                            <li class="technology">Juce</li>
-
-                        </ul>
-                    </section>
-                    <img src="images/utility.png" alt="Project" class="grid-img">
-                </div>
-
-                <!-- <div class="project">
-                    <section class="project-info">
-
-                        <br><br>
-                        <h3 class="third-heading">Stereo Imager Plugin </h3>
-                        <p class="description">Two-band stereo imager
-                        </p> <a class="playButton" href="#" onclick="toggleImager();">
-                            <h3>►</h3>
-                        </a> <br><br><br>
-
-                        <!-- <img width="15" height="15"
-                            src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Github-desktop-logo-symbol.svg"
-                            alt=""> <a href="https://github.com/wictorsson/stereimager" class="link-item"
-                            target="_blank">GitHub</a> -->
-
-
-                <!-- <ul class="technologies">
-                            <li class="technology">C++</li>
-                            <li class="technology">Juce</li>
-                        </ul>
-                    </section>
-                    <img src="images/imager.png" alt="Project" class="grid-img">
-                </div> -->
-
                 <div class="fade"></div>
             </section>
         </section>
@@ -347,7 +256,6 @@
                 allowfullscreen></iframe>
             <span class="close" onclick="toggle();">&times;</span>
         </div>
-
 
         <ul class="links">
             <li class="link-item">
@@ -380,9 +288,7 @@
                     </svg>
                 </a>
             </li>
-
         </ul>
-
         <section id="about">
             <br><br><br><br>
             <p class="text2">Hi, I'm a freelance developer specializing in music and audio applications,
@@ -392,12 +298,9 @@
                 At present, I am fully immersed in the development of audio apps and plugins, having recently graduated
                 from the Spiced Academy Web Development Program. </p>
         </section>
-
     </main>
-
     <footer class="footer">
-        <small class="copyright">&copy; Copyright 2023.</small>
-
+        <small class="copyright">&copy; Copyright 2024.</small>
     </footer>
 </body>
 
