--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main class="main">
       <section class="intro">
         <h1 class="first-heading">Fredrik Wictorsson</h1>
-        <div class="third-heading">Web Development & Audio Programming</div>
+        <div class="third-heading">Web Developer & Audio Programmer</div>
       </section>
       <section id="about">
         <br />
