--- a/index.html
+++ b/index.html
@@ -56,16 +56,37 @@
     <main class="main">
       <section class="intro">
         <h1 class="first-heading">Fredrik Wictorsson</h1>
-        <div class="third-heading">Web Developer & Audio Programmer</div>
+        <div class="second-heading">Web Developer & Audio Programmer</div>
       </section>
       <section id="about">
         <br />
         <p class="text2">
-          Hi, I'm a programmer specializing in web and audio applications,
-          residing in Berlin. I completed my education in media technology and
-          music composition in my hometown of Stockholm. At present, I work as a
-          web developer and I am also running the software company Softon DSP,
-          developing audio and music desktop software.
+          As a
+          <span style="font-weight: bold; color: #000000">programmer</span>
+          specializing in
+          <span style="font-weight: bold; color: #000000">web</span> and
+          <span style="font-weight: bold; color: #000000"
+            >audio applications</span
+          >, I bring a blend of
+          <span style="font-weight: bold; color: #000000"
+            >technical and creative expertise
+          </span>
+          to my work. Based in Berlin, I completed my education in
+          <span style="font-weight: bold; color: #000000"
+            >Media Technology</span
+          >
+          and
+          <span style="font-weight: bold; color: #000000"
+            >Music Composition</span
+          >
+          in my hometown of Stockholm. Currently, I work as a
+          <span style="font-weight: bold; color: #000000">web developer</span>
+          at a startup company and run
+          <span style="font-weight: bold; color: #000000">Softon DSP</span>, a
+          software company dedicated to developing
+          <span style="font-weight: bold; color: #000000"
+            >audio and music desktop software</span
+          >.
         </p>
       </section>
       <section class="work">
@@ -89,247 +110,189 @@
 
         <section class="grid">
           <div class="project">
+            <img src="./images/groupera.png" alt="Project" class="grid-img" />
             <section class="project-info">
-              <br /><br />
-              <h3 class="third-heading">Groupera</h3>
-              <p class="description">
-                A social platform for self-help groups (Frontend)<br /><br /><a
+              <div>
+                <h2 class="second-heading">Groupera Web App - Fullstack</h2>
+                <p class="description">
+                  A social platform for people with mental illnesses. Create and
+                  moderate a self help group, or join existing self help groups
+                  and attend video meetings.
+                </p>
+              </div>
+              <div>
+                <a
                   href="https://app.groupera.de/"
                   target="_blank"
-                  >Visit in browser</a
+                  class="button-small"
+                  >WEBSITE</a
                 >
-              </p>
-              <br /><br /><br />
+              </div>
               <ul class="technologies">
                 <li class="technology">React</li>
+                <li class="technology">Next</li>
+                <li class="technology">Websockets</li>
                 <li class="technology">Tailwind</li>
                 <li class="technology">Redux</li>
               </ul>
             </section>
-            <img src="./images/groupera.png" alt="Project" class="grid-img" />
           </div>
           <div class="project">
+            <img src="./images/softondsp.png" alt="Project" class="grid-img" />
             <section class="project-info">
-              <br /><br />
-              <h3 class="third-heading">Modular Synth System</h3>
-              <p class="description">
-                A virtual eurorack that runs in the browser.<br /><br /><a
-                  href="https://modular-spiced.vercel.app/"
+              <div>
+                <h2 class="second-heading">Softon DSP Web Shop - Fullstack</h2>
+                <p class="description">
+                  An online store for audio and music plugins, providing tools
+                  for musicians, producers, and audio engineers.
+                </p>
+              </div>
+              <div>
+                <a
+                  href="https://softondsp.com/"
                   target="_blank"
-                  >Visit in browser</a
+                  class="button-small"
+                  >WEBSITE</a
                 >
-              </p>
-              <a class="playButton" href="#" onclick="toggleModular();">
-                <h3>►</h3>
-              </a>
-              <br /><br /><br />
-
+              </div>
               <ul class="technologies">
-                <li class="technology">Javascript</li>
-                <li class="technology">Next.js</li>
-                <li class="technology">MongoDB</li>
-                <li class="technology">Tone.js</li>
+                <li class="technology">Next</li>
+                <li class="technology">Tailwind</li>
+                <li class="technology">Three js</li>
               </ul>
             </section>
+          </div>
+          <div class="project">
+            <img src="./images/pincher.png" alt="Project" class="grid-img" />
+            <section class="project-info">
+              <div>
+                <h2 class="second-heading">
+                  Pincher Audio Plugin - Programming
+                </h2>
+                <p class="description">
+                  A versatile filter audio plugin (VST3 and Audio Unit)
+                  specifically designed for audio and music producers to enhance
+                  their sound production and make their workflow easier.
+                </p>
+              </div>
+              <div>
+                <a
+                  href="https://softondsp.com/"
+                  target="_blank"
+                  class="button-small"
+                  >WEBSITE</a
+                >
+                <a class="playButton" href="#" onclick="toggleMorphFilter();">
+                  <h3>►</h3>
+                </a>
+              </div>
+              <ul class="technologies">
+                <li class="technology">C++</li>
+                <li class="technology">iPlug2</li>
+              </ul>
+            </section>
+          </div>
+          <div class="project">
             <img
               src="./images/modularspiced.png"
               alt="Project"
               class="grid-img"
             />
-          </div>
-          <div class="project">
             <section class="project-info">
-              <br /><br />
-              <h3 class="third-heading">Filter plugin</h3>
-              <p class="description">Audio plugin/ Morphing filter</p>
-              <a class="playButton" href="#" onclick="toggleMorphFilter();">
-                <h3>►</h3>
-              </a>
-              <br /><br /><br />
+              <div>
+                <h2 class="second-heading">Modular Synth System - Fullstack</h2>
+                <p class="description">
+                  A virtual eurorack that runs in the browser. Create and share
+                  your projects with other users.
+                </p>
+              </div>
+              <div>
+                <a
+                  href="https://modular-spiced.vercel.app/"
+                  target="_blank"
+                  class="button-small"
+                  >WEBSITE</a
+                >
+                <a class="playButton" href="#" onclick="toggleModular();">
+                  <h3>►</h3>
+                </a>
+              </div>
               <ul class="technologies">
-                <li class="technology">C++</li>
-                <li class="technology">JUCE</li>
+                <li class="technology">Next</li>
+                <li class="technology">Web Audio Api</li>
               </ul>
             </section>
-            <img src="images/squeeze.png" alt="Project" class="grid-img" />
           </div>
-
           <div class="project">
-            <section class="project-info">
-              <br /><br />
-              <h3 class="third-heading">Music/Audio player</h3>
-              <p class="description">
-                Audio player/Analyzer with MIDI implementation
-              </p>
-              <a class="playButton" href="#" onclick="toggleAudioPlayer();">
-                <h3>►</h3>
-              </a>
-              <br /><br /><br />
-              <ul class="technologies">
-                <li class="technology">C++</li>
-                <li class="technology">Qt/QML</li>
-              </ul>
-            </section>
             <img
-              src="images/SamplePlayerDemo.png"
+              src="./images/scripterLegato.jpg"
               alt="Project"
               class="grid-img"
             />
-          </div>
-          <div class="project">
             <section class="project-info">
-              <br /><br />
-              <h3 class="third-heading">DJ Music Player</h3>
-              <p class="description">
-                Dual deck music player with DJ functions
-              </p>
-              <a class="playButton" href="#" onclick="toggleDjApp();">
-                <h3>►</h3>
-              </a>
-              <br /><br /><br />
-              <ul class="technologies">
-                <li class="technology">C++</li>
-                <li class="technology">Qt</li>
-                <li class="technology">Superpowered</li>
-              </ul>
-            </section>
-            <img src="images/djapp.png" alt="Project" class="grid-img" />
-          </div>
-
-          <div class="project">
-            <section class="project-info">
-              <br /><br />
-              <h3 class="third-heading">Delay Audio Plugin</h3>
-              <p class="description">
-                Delay with reverse mode and other effects
-              </p>
-              <a class="playButton" href="#" onclick="toggleEchoDelay();">
-                <h3>►</h3>
-              </a>
-              <br /><br /><br />
-              <ul class="technologies">
-                <li class="technology">C++</li>
-                <li class="technology">Juce</li>
-              </ul>
-            </section>
-            <img src="images/echodelay2.png" alt="Project" class="grid-img" />
-          </div>
-
-          <div class="project">
-            <section class="project-info">
-              <h3 class="third-heading">Music Art Gallery</h3>
-              <p class="description">
-                Image gallery with API calls to update images regularly
-              </p>
-              <a href="https://music-art-gallery.vercel.app/" target="_blank"
-                >Visit in browser</a
-              >
-              <br /><br />
-              <br /><br />
-              <br /><br />
-              <ul class="technologies">
-                <li class="technology">Typescript</li>
-                <li class="technology">Next.js</li>
-              </ul>
-            </section>
-            <img
-              src="images/musicartgallery.png"
-              alt="Project"
-              class="grid-img"
-            />
-          </div>
-
-          <div class="project">
-            <section class="project-info">
-              <br /><br />
-              <h3 class="third-heading">Quiz App</h3>
-              <p class="description">
-                Audio quiz app in the browser. Answer audio related questions or
-                create your own quiz.
-              </p>
-              <a href="https://quiz-app-wictorsson.vercel.app/" target="_blank"
-                >Visit in browser</a
-              >
-              <br /><br />
-              <br /><br />
-              <ul class="technologies">
-                <li class="technology">HTML</li>
-                <li class="technology">CSS</li>
-                <li class="technology">JAVASCRIPT</li>
-              </ul>
-            </section>
-            <img
-              src="images/appquizbright.png"
-              alt="Project"
-              class="grid-img"
-            />
-          </div>
-          <div class="project">
-            <section class="project-info">
-              <br /><br />
-              <h3 class="third-heading">Clipper Plugin</h3>
-              <p class="description">
-                Distortion plugin with oscilloscope
-                <br />
-              </p>
-              <a class="playButton" href="#" onclick="toggleClipper();">
-                <h3>►</h3>
-              </a>
-              <br /><br /><br />
-              <ul class="technologies">
-                <li class="technology">C++</li>
-                <li class="technology">Juce</li>
-              </ul>
-            </section>
-            <img src="images/clipper.png" alt="Project" class="grid-img" />
-          </div>
-          <div class="project">
-            <section class="project-info">
-              <br /><br />
-              <h3 class="third-heading">True Legato Script</h3>
-              <p class="description">
-                True legato script for Logic's Sampler/EXS24. <br /><br /><a
+              <div>
+                <h2 class="second-heading">True Legato Script - Programming</h2>
+                <p class="description">
+                  A true legato script for Logic's Sampler/EXS24, designed to
+                  provide more realistic and smooth transitions between notes.
+                </p>
+              </div>
+              <div>
+                <a
                   href="https://vi-control.net/community/threads/sampler-exs-true-legato-demo.119600/"
                   target="_blank"
-                  download
-                  class="link-item"
+                  class="button-small"
+                  >READ MORE</a
                 >
-                  MORE INFO
+                <a class="playButton" href="#" onclick="toggle();">
+                  <h3>►</h3>
                 </a>
-              </p>
-              <a class="playButton" href="#" onclick="toggle();"> <h3>►</h3> </a
-              ><br /><br />
+              </div>
               <ul class="technologies">
                 <li class="technology">Javascript</li>
               </ul>
             </section>
-            <img
-              src="images/scripterLegato.jpg"
-              alt="Project"
-              class="grid-img"
-            />
           </div>
           <div class="project">
+            <img src="./images/echodelay2.png" alt="Project" class="grid-img" />
             <section class="project-info">
-              <h3 class="third-heading">MD Cello (Kontakt)</h3>
-              <p class="description">
-                Cello instrument sampled in the low range playing sul tasto.
-                True legato, sustains and shorts were recorded and scripted into
-                one single patch. <br /><br />
-                <a
-                  href="https://www.dropbox.com/s/t33je5e44hh1ex5/Vcl%20MD%20Kontakt%20Instrument.zip?dl=1"
-                  download
-                  class="link-item"
-                >
-                  DOWNLOAD
+              <div>
+                <h2 class="second-heading">Delay Audio Plugin - Programming</h2>
+                <p class="description">
+                  A delay plugin (VST3, Audio Unit) featuring reverse mode and a
+                  range of multi-effects
+                </p>
+              </div>
+              <div>
+                <a class="playButton" href="#" onclick="toggleEchoDelay();">
+                  <h3>►</h3>
                 </a>
-              </p>
+              </div>
               <ul class="technologies">
-                <li class="technology">KSPscript</li>
+                <li class="technology">C++</li>
+                <li class="technology">Juce</li>
               </ul>
             </section>
-            <img src="images/kontaktmd.jpg" alt="Project" class="grid-img" />
           </div>
+
+          <!-- <div class="project"> -->
+          <!--   <section class="project-info"> -->
+          <!--     <br /><br /> -->
+          <!--     <h3 class="third-heading">Delay Audio Plugin</h3> -->
+          <!--     <p class="description"> -->
+          <!--       Delay with reverse mode and other effects -->
+          <!--     </p> -->
+          <!--     <a class="playButton" href="#" onclick="toggleEchoDelay();"> -->
+          <!--       <h3>►</h3> -->
+          <!--     </a> -->
+          <!--     <br /><br /><br /> -->
+          <!--     <ul class="technologies"> -->
+          <!--       <li class="technology">C++</li> -->
+          <!--       <li class="technology">Juce</li> -->
+          <!--     </ul> -->
+          <!--   </section> -->
+          <!--   <img src="images/echodelay2.png" alt="Project" class="grid-img" /> -->
+          <!-- </div> -->
           <div class="fade"></div>
         </section>
       </section>
