--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main class="main">
       <section class="intro">
         <h1 class="first-heading">Fredrik Wictorsson</h1>
-        <div class="second-heading">Web Developer & Audio Programmer</div>
+        <div class="second-heading">Software Engineer</div>
       </section>
       <section id="about">
         <br />
@@ -80,8 +80,10 @@
             >Music Composition</span
           >
           in my hometown of Stockholm. Currently, I work as a
-          <span style="font-weight: bold; color: #000000">web developer</span>
-          at a startup company and run
+          <span style="font-weight: bold; color: #000000">software engineer</span>
+          at 
+          <span style="font-weight: bold; color: #000000">Alfaview</span>
+            and run 
           <span style="font-weight: bold; color: #000000">Softon DSP</span>, a
           software company dedicated to developing
           <span style="font-weight: bold; color: #000000"
@@ -312,7 +314,7 @@
       </div>
     </main>
     <footer class="footer">
-      <small class="copyright">&copy; Copyright 2024.</small>
+      <small class="copyright">&copy; Copyright 2025.</small>
     </footer>
   </body>
 </html>
